switched ile group padding top to vh to fix spacing issues between pc and mobile versions

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ font-weight: lighter;
     max-width: 900px;
     
     padding: 0 1.5em;
-	padding-bottom: 45px;
+	padding-bottom: 2%;
 }
 
 .about-image {
