--- a/tile.css
+++ b/tile.css
@@ -9,9 +9,9 @@ html {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
     grid-auto-rows: auto;
-    gap: 20px;
+    gap: 1.5px;
     font-family: sans-serif;
-    padding-top: 30px;
+    padding-top: 5vh;
     max-width: 70%;
     display: grid;
     gap: 20px;
